--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <div class = "header">5 秒当てゲーム</div>
+    <div class = "description">
+            <p>Progateとドットインストールで勉強したHTML,CSS,Javascriptを使って、
+            5秒当てゲームを作りました。
+            
+            Startボタンを押すとカウントが始まります。
+            5秒経ったと思ったらStopボタンを押してください。
+            誤差が±0.5秒以内であれば、カウンターが可愛くなります。
+            
+            リトライするときは、もう一度スタートを押してください。
+            5秒ぴったり目指して遊んでもらえると嬉しいです(*'▽')</p>
+    </div>
     <div class = "container">
         <div id = "target">5.000</div>
         <div id = "result" class = "standby">0.000</div>
