--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <div class = "header">5 秒当てゲーム</div>
     <div class = "description">
             <p>Progateとドットインストールで勉強したHTML,CSS,Javascriptを使って、
-            5秒当てゲームを作りました。
+            5秒当てゲームを作りました。</p>
             
-            Startボタンを押すとカウントが始まります。
-            5秒経ったと思ったらStopボタンを押してください。
-            誤差が±0.5秒以内であれば、カウンターが可愛くなります。
+            <p>Startボタンを押すとカウントが始まります。</p>
+            <p>5秒経ったと思ったらStopボタンを押してください。</p>
+            <p>誤差が±0.5秒以内であれば、カウンターが可愛くなります。</p>
             
-            リトライするときは、もう一度スタートを押してください。
-            5秒ぴったり目指して遊んでもらえると嬉しいです(*'▽')</p>
+            <p>リトライするときは、もう一度スタートを押してください。</p>
+            <p>5秒ぴったり目指して遊んでもらえると嬉しいです(*'▽')</p>
     </div>
     <div class = "container">
         <div id = "target">5.000</div>
