--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div class = "header">5 秒当てゲーム</div>
+    <div class = "header">5 seconds !</div>
+    
     <div class = "description">
             <p>Progateとドットインストールで勉強したHTML,CSS,Javascriptを使って、
             5秒当てゲームを作りました。</p>
